[project]
name = "ai-fest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-milvus>=0.2.0",
    "langchain-openai>=0.3.24",
    "langchain-text-splitters>=0.3.8",
    "pypdf>=5.6.0",
]
